# automotive_autonomy_msgs

./: .travis.rosinstall  LICENSE  README.md
.circleci/: config.yml
.github/workflows/: ros_build.yml
as_generic_msg/: CMakeLists.txt  package.xml
as_generic_msg/msg/: command_with_handshake.msg  module_state.msg  point_of_interest_response.msg  point_of_interest_status.msg
as_veh_automation_msg/: CMakeLists.txt  package.xml
automation_msgs/: CMakeLists.txt  package.xml
automation_msgs/msg/: CommandWithHandshake.msg  GearCommand.msg  GearFeedback.msg  ModuleState.msg  PointOfInterestArray.msg  PointOfInterestRequest.msg  PointOfInterestResponse.msg  PointOfInterestStatus.msg  module_state.msg  point_of_interest_list.msg  point_of_interest_request.msg  point_of_interest_status.msg
automotive_autonomy_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
automotive_navigation_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
automotive_navigation_msgs/migration/: PointOfInterestRequest.bmr  PointOfInterestResponse.bmr
automotive_navigation_msgs/msg/: DesiredDestination.msg  Direction.msg  DistanceToDestination.msg  LaneBoundaryArray.msg  ModuleState.msg  PointOfInterest.msg  PointOfInterestRequest.msg  PointOfInterestResponse.msg  PointOfInterestStatus.msg  RoadNetworkBoundaries.msg
automotive_platform_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
automotive_platform_msgs/msg/: AdaptiveCruiseControlSettings.msg  CabinReport.msg  DriverCommands.msg  Speed.msg  Steer.msg  SteerMode.msg  SteerWheel.msg  TurnSignalCommand.msg  UserInputADAS.msg  UserInputMedia.msg  VelocityAccel.msg
highway_msg/: CMakeLists.txt  package.xml
highway_msg/msg/: adaptive_cruise_control_command.msg  adaptive_cruise_control_settings.msg  distance_to_destination.msg  lane.msg  speed.msg  steer_mode.msg  steer_wheel.msg
highway_msgs/: CMakeLists.txt  package.xml
highway_msgs/msg/: AdaptiveCruiseControlSettings.msg  LaneModels.msg  Speed.msg  SpeedMode.msg  Steer.msg  SteerMode.msg  desired_destination.msg  driver_commands.msg  lane.msg  lane_models.msg  speed_mode.msg  speed_pedals.msg  steer.msg  steer_wheel.msg
hmi_msgs/: CMakeLists.txt  package.xml
hmi_msgs/msg/: CabinReport.msg  UserInputCruiseControl.msg
module_comm_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
module_comm_msgs/msg/: AdaptiveCruiseControlCommand.msg  AdaptiveCruiseControlSettings.msg  DesiredDestination.msg  DistanceToDestination.msg  LaneBoundary.msg  ModuleState.msg  PointOfInterest.msg  PointOfInterestArray.msg  PointOfInterestResponse.msg  RoadBoundaries.msg  RoadBoundariesArray.msg  RouteArray.msg
perception_msgs/: CMakeLists.txt  package.xml
perception_msgs/msg/: Cipv.msg  LaneModels.msg  Object.msg  ObjectClassified.msg  ObjectClassifiedWithCovariance.msg  ObjectDetected.msg  ObjectDetectedWithCovariance.msg  ObjectStamped.msg  ObjectTracked.msg  ObjectTrackedWithCovariance.msg  ObjectWithCovariance.msg  ObjectWithCovarianceStamped.msg
platform_automation_msgs/: CHANGELOG.rst  package.xml
platform_comm_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
platform_comm_msgs/msg/: GearCommand.msg  GearFeedback.msg  UserInputMenus.msg
radar_msg/: CMakeLists.txt  package.xml
radar_msg/msg/: cipv.msg  esr_configuration.msg  radar.msg  radar_as_rx.msg  radar_objects.msg  radar_rx_vehicle1.msg  radar_status.msg
radar_msgs/: CMakeLists.txt  package.xml
radar_msgs/msg/: RadarDetection.msg  RadarErrorStatus.msg  RadarStatus.msg  cipv.msg  cipv_track.msg  radar_detection.msg  radar_detection_array.msg  radar_detection_stamped.msg  radar_error_status.msg  radar_objects.msg  radar_track.msg  radar_track_array.msg  radar_track_stamped.msg
