<?xml version="1.0"?>
<package>
  <name>as_generic_msg</name>
  <version>0.1.0</version>
  <description>Generic Messages</description>

  <maintainer email="dstanek@autonomoustuff.com">Daniel Stanek</maintainer>
  <license>BSD 3-Clause</license>
  <author email="dstanek@autonomoustuff.com">Daniel Stanek</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
