<?xml version="1.0"?>
<package>
  <name>automation_msgs</name>
  <version>1.0.0</version>
  <description>Generic Automation Messages</description>

  <maintainer email="software@autonomoustuff.com">AutonomouStuff Software Development Team</maintainer>
  <license>BSD 3-Clause</license>
  <author email="dstanek@autonomoustuff.com">Daniel Stanek</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
