<?xml version="1.0"?>
<package format="2">
  <name>automotive_autonomy_msgs</name>
  <version>2.0.3</version>
  <description>Messages for vehicle automation</description>
  <license>MIT</license>

  <url type="website">http://github.com/automotive_autonomy_msgs</url>
  <url type="repository">https://github.com/astuff/automotive_autonomy_msgs</url>
  <url type="bugtracker">https://github.com/astuff/automotive_autonomy_msgs/issues</url>

  <maintainer email="software@autonomoustuff.com">AutonomouStuff Software Development Team</maintainer>
  <author email="dstanek@autonomoustuff.com">Daniel Stanek</author>
  <author email="jwhitley@autonomoustuff.com">Joshua Whitley</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>automotive_navigation_msgs</exec_depend>
  <exec_depend>automotive_platform_msgs</exec_depend>

  <export>
    <metapackage />
  </export>
</package>
