<?xml version="1.0"?>
<package>
  <name>hmi_msgs</name>
  <version>1.7.2</version>
  <description>The hmi_msgs package</description>
  <license>BSD 3-Clause</license>
  <url type="repository">https://bitbucket.org/autonomoustuff/platform_automation_msgs</url>
  <maintainer email="software@autonomoustuff.com">AutonomouStuff Software Team</maintainer>
  <author email="jwhitley@autonomoustuff.com">Joshua Whitley</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
