<?xml version="1.0"?>
<package>
  <name>platform_automation_msgs</name>
  <version>2.0.0</version>
  <description>Messages for vehicle automation</description>

  <maintainer email="software@autonomoustuff.com">AutonomouStuff Software Development Team</maintainer>
  <license>GNU GPLv3</license>
  <author email="dstanek@autonomoustuff.com">Daniel Stanek</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>module_comm_msgs</run_depend>
  <run_depend>perception_msgs</run_depend>
  <run_depend>platform_comm_msgs</run_depend>
  <run_depend>radar_msgs</run_depend>

  <export>
    <metapackage />
  </export>
</package>
