<?xml version="1.0"?>
<package>
  <name>platform_automation_msgs</name>
  <version>2.0.0</version>
  <description>Messages for vehicle automation</description>
  <license>GPLv3</license>

  <url type="repository">https://github.com/astuff/platform_automation_msgs</url>
  <url type="bugtracker">https://github.com/astuff/platform_automation_msgs/issues</url>

  <maintainer email="software@autonomoustuff.com">AutonomouStuff Software Development Team</maintainer>
  <author email="dstanek@autonomoustuff.com">Daniel Stanek</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>module_comm_msgs</run_depend>
  <run_depend>perception_msgs</run_depend>
  <run_depend>platform_comm_msgs</run_depend>
  <run_depend>radar_msgs</run_depend>

  <export>
    <metapackage />
  </export>
</package>
